cmake_minimum_required(VERSION 3.16)
project(c C)

set(CMAKE_C_STANDARD 99)

add_executable(c main.c)
add_executable(c1.1 archive/1.1.c)
add_executable(c1.8 archive/1.8.c)
add_executable(c1.9 archive/1.9.c)
add_executable(c1.10 archive/1.10.c)
add_executable(wc archive/wc.c)
add_executable(c1.12 archive/1.12.c)
add_executable(digitReader archive/digitCounter.c)
add_executable(c1.13 archive/1.13.c)
add_executable(pow archive/pow.c)
add_executable(c1.19 archive/1.19.c)
add_executable(c2.1 archive/2.1.c)